# jubilee-engine

./: Cargo.toml  Makefile
includes/scripts/: action.rhai  chance_action.rhai  cycle.rhai
src/: lib.rs
www/: board.json  chance_cards.json  index.html  main.js
www/scripts/: action.rhai  cycle.rhai  game.rhai
